# MalForge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  RUNBOOK.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attck/: __init__.py  mapper.py  navigator.py
converters/: __init__.py  wazuh_converter.py
core/: __init__.py  constants.py  models.py  pipeline.py  schema.py
docs/: architecture.md  attack_mapping.md  usage.md  version_scope.md
enrichment/: __init__.py  misp.py  urlhaus.py  virustotal.py
extractor/: __init__.py  file_extractor.py  network_extractor.py  persistence_extractor.py  process_extractor.py  registry_extractor.py  signature_extractor.py
generators/: __init__.py  sigma_generator.py
ingestion/: __init__.py  anyrun.py  cape.py  cuckoo.py
ioc/: __init__.py  ioc_extractor.py
quality/: __init__.py  risk_scorer.py  test_event_generator.py  validator.py
reporting/: report_generator.py  summary.py
review/: __init__.py  reviewer.py  versioner.py
samples/: anyrun_sample.json  cuckoo_sample.json
tests/: test_attck.py  test_converters.py  test_core_constants.py  test_core_models.py  test_core_schema.py  test_enrichment.py  test_extractor.py  test_generators.py  test_ingestion.py  test_ioc.py  test_pipeline.py  test_quality.py  test_reporting.py  test_repository_metadata.py  test_review.py
tests/fixtures/: sample_cape_report.json
validation/: internet_validation_manifest_50.json  internet_validation_summary_50.json  internet_validation_summary_50.md  report_names_and_findings_50.csv  report_names_and_findings_50.md
validation/internet_reports_50/: urlhaus_01_110_37_53_25.json  urlhaus_02_jim_s_com.json  urlhaus_03_jim_s_com.json  urlhaus_04_jim_s_com.json  urlhaus_05_jim_s_com.json  (+45 more)
(+521 files in other folders)
