[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malware-behavior-detection-generator"
version = "0.1.0"
description = "Scaffold for a malware behavior to detection rule generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7.0",
  "pytest>=8.0,<10.0",
]

[project.scripts]
malforge = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "attck*",
  "converters*",
  "core*",
  "enrichment*",
  "extractor*",
  "generators*",
  "ingestion*",
  "ioc*",
  "quality*",
  "reporting*",
  "review*",
]
